--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       These blocks are the same as the first blocks to get that looping illusion going.
       You need to add clones to fill out a full viewport height.
       -->
-      <!--<section class="green is-clone">
+      <section class="green is-clone">
         <h1>One</h1>
       </section>
       <section class="red is-clone">
         <h1>For</h1>
-      </section>-->
+      </section>
       <script src="main.js" type="text/javascript"></script>
     </main>
   <body>
