Delete class is-clone

--- a/index.html
+++ b/index.html
@@ -28,14 +28,20 @@
       </section>
 
       <!--
-      These blocks are the same as the first blocks to get that looping illusion going.
+      These blocks are the same as the first blocks to get that
+      looping illusion going.
       You need to add clones to fill out a full viewport height.
+      -----------------------------------------------------------
+      For main_old.js insert class is-clone in the last two 
+      sections.
+      Last section insert class red instead of green.
+      And h1 text is For.
       -->
-      <section class="green is-clone">
+      <section class="green">
         <h1>One</h1>
       </section>
-      <section class="red is-clone">
-        <h1>For</h1>
+      <section class="green">
+        <h1>One</h1>
       </section>
       <script src="main.js" type="text/javascript"></script>
     </main>
